Updated images to webp + updated components

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/logo.png" />
+    <link rel="icon" type="image/webp" href="%PUBLIC_URL%/images/logo.webp" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!-- Viewport & Theme -->
@@ -12,27 +12,32 @@
     <meta name="theme-color" content="#D32F2F" />
 
     <!-- Basic SEO -->
-    <title>Maurya Constructions | Civil & Interior Contractors in Maharashtra</title>
+    <title>
+      Maurya Constructions | Civil & Interior Contractors in Maharashtra
+    </title>
+
     <meta
       name="description"
       content="Maurya Constructions specializes in civil contracting, interior design, renovation, plumbing, and maintenance services across Maharashtra. Trusted for quality and timely execution."
     />
+
     <meta
       name="keywords"
       content="Maurya Constructions, civil contractors, construction company, interior design, renovation, plumbing, maintenance, Maharashtra builders, residential projects, commercial construction"
     />
+
     <meta name="author" content="Maurya Constructions Pvt. Ltd." />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://mauryaconstructions.in/" />
 
-    <!-- Open Graph (for Facebook, WhatsApp, LinkedIn) -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Maurya Constructions" />
     <meta
       property="og:description"
       content="Trusted civil and interior contractors across Maharashtra — delivering quality, precision, and excellence in every project."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/images/og-image.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/og-image.webp" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mauryaconstructions.in" />
 
@@ -43,7 +48,7 @@
       name="twitter:description"
       content="Leading civil and interior contractors in Maharashtra."
     />
-    <meta name="twitter:image" content="%PUBLIC_URL%/images/og-image.jpg" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/og-image.webp" />
 
     <!-- Google Verification -->
     <meta
@@ -51,7 +56,7 @@
       content="YOUR_GOOGLE_VERIFICATION_CODE_HERE"
     />
 
-    <!-- Schema.org JSON-LD (Structured Data) -->
+    <!-- Structured Data -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -59,7 +64,7 @@
         "name": "Maurya Constructions",
         "url": "https://mauryaconstructions.in",
         "logo": "https://mauryaconstructions.in/images/logo.png",
-        "image": "https://mauryaconstructions.in/images/og-image.jpg",
+        "image": "https://mauryaconstructions.in/images/og-image.webp",
         "description": "Maurya Constructions offers civil contracting, interior design, renovation, and plumbing services across Maharashtra.",
         "telephone": "+91-XXXXXXXXXX",
         "address": {
